--- a/index.html
+++ b/index.html
@@ -266,13 +266,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://i-tee.vercel.app'"
+                onclick="location.href='https://github.com/iTeeNotTech/Portfoilio-Website'"
               >
-                Github
+                Github 
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://i-tee.vercel.app'"
               >
                 Live Demo
               </button>
