--- a/index.html
+++ b/index.html
@@ -286,17 +286,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">BarberShop Website</h2>
             <div class="btn-container">
-              <button
+              <!--<button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Github
-              </button>
+              </button> -->
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://revaayt.com/#services'"
               >
                 Live Demo
               </button>
